# etc

./: .gitignore  LICENSE  Makefile  README.md  diamond_mro.py  load_terminfo.c
_data/: README.md
_data/gutenberg/cleopatra/: 1534-cleopatra.txt
_data/gutenberg/coriolanus/: 6990-coriolanus.txt
_data/gutenberg/hamlet/: 1122-hamlet.txt  1524-hamlet.txt  2265-hamlet.txt  27761-hamlet.txt
_data/tables/: cities.txt
c/: Makefile
chacha/: CMakeLists.txt  chacha.h  simple_demo.c
load_terminfo/: Makefile  README.md  main.c
macos_basic_app/: CMakeLists.txt
macos_basic_app/src/: main.m
macos_basic_app/stock/: grid.icns
metal_basics/: CMakeLists.txt  triangle_colored.m  triangle_colored_ca.m  triangle_textured_spinning.m
metal_basics/shaders/: TriangleColored.metal  TriangleTexturedSpinning.metal
metal_graphics/: CMakeLists.txt  mgrun.sh
metal_graphics/platform/: log.h  log.m  main.m
metal_graphics/src/: main.c
metal_graphics/src/platform/: common.h  glue.h
metal_graphics/src/platform/macos/: common.m  main.m
metal_hello_triangle/: triangle_colored.m  triangle_colored_ca.m  triangle_textured.m
metal_hello_triangle/shaders/: TriangleColored.metal  TriangleTextured.metal
misc_c/: Makefile  arenas.c  load_terminfo.c
objc_cpp_interop/: CMakeLists.txt  iface.cpp  iface.hpp  main.mm
py/: rb_tree.py
rb_tree_py/: README.md
txt/: README.md
txt/cleopatra/: 2268-cleopatra.txt
txt/gutenberg/: arundell.txt
txt/gutenberg/cleopatra/: 1130-cleopatra.txt
txt/gutenberg/coriolanus/: 1797-coriolanus.txt  2259-coriolanus.txt
txt/gutenberg/hamlet/: 1787-hamlet.txt
